[package]
name = "forestgenerationthing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.19.1"
winit = "0.29.11"
env_logger = "0.10"
log = "0.4"
pollster = "0.3.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
image = { version = "0.24", features = ["png", "jpeg"], default-features = false }
anyhow = "1.0.80"
